--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 </div>
 <div class="slide-container">
   <div class="slide fade">
-  <img src='../website or blog/images/home6.jpg' width="2000px">
+  <img src='../images/home6.jpg' width="2000px">
   </div>
   <div class="slide fade">
-  <img src='../website or blog/images/home2.png' width="1000%">
+  <img src='../images/home2.png' width="1000%">
   </div>
   <div class="slide fade">
-  <img src='../website or blog/images/home3.png' width="1000%">
+  <img src='../images/home3.png' width="1000%">
   </div>
   <div class="slide fade">
-  <img src='../website or blog/images/home5.jpg' width="1000%">
+  <img src='../images/home5.jpg' width="1000%">
   </div>
   <a href="#" class="prev" title="Previous">&#10094</a>
   <a href="#" class="next" title="Next">&#10095</a>
