--- a/operating.html
+++ b/operating.html
@@ -57,19 +57,19 @@
     <h1> FOLLOWING ARE SOME EXAMPLES OF OPERATING SYSTEM WHICH WE INSTALL:</h1>
 <div class="slide-container">
   <div class="slide fade">
-  <img src='../website or blog/images/w.jpg' width="2000px" height="400px">
+  <img src='../train/images/w.jpg' width="2000px" height="400px">
   </div>
   <div class="slide fade">
-  <img src='../website or blog/images/w2.jpg' width="2000px" height="400px">
+  <img src='../train/images/w2.jpg' width="2000px" height="400px">
   </div>
   <div class="slide fade">
-  <img src='../website or blog/images/w3.jpg' width="2000px" height="400px">
+  <img src='../train/images/w3.jpg' width="2000px" height="400px">
   </div>
   <div class="slide fade">
-  <img src='../website or blog/images/u.png' width="2000px" height="400px">  
+  <img src='../train/images/u.png' width="2000px" height="400px">  
   </div>
   <div class="slide fade">
-    <img src='../website or blog/images/l.jpg' width="2000px" height="400px">  
+    <img src='../train/images/l.jpg' width="2000px" height="400px">  
     </div>
   <a href="#" class="prev" title="Previous">&#10094</a>
   <a href="#" class="next" title="Next">&#10095</a>
@@ -99,9 +99,9 @@
 </nav>    
 <div class="footer">
   <h3>FOLLOW US ALSO ON:</h3>
-<a class="footer"href="mailto:sanjeev_svct@yahoo.com"><img src="../website or blog/images/m-removebg-preview.png"  width="50px" height="50px"></a>
-<a class="footer"href=""><img src="../website or blog/images/OIP-removebg-preview.png" width="50px"height="50px"></a>
-<a class="footer" href="https://www.facebook.com/ldhcomputershop/reviews/"><img src="../website or blog/images/R-removebg-preview.png" width="50px"height="50px"></a>
+<a class="footer"href="mailto:sanjeev_svct@yahoo.com"><img src="../train/images/m-removebg-preview.png"  width="50px" height="50px"></a>
+<a class="footer"href=""><img src="../train/images/OIP-removebg-preview.png" width="50px"height="50px"></a>
+<a class="footer" href="https://www.facebook.com/ldhcomputershop/reviews/"><img src="../train/images/R-removebg-preview.png" width="50px"height="50px"></a>
 <h3>SHOP ADDRESS</h3>
 <p>Shop No 3, Guru Nanak Market,<br> Bhai Himmat Singh Nagar Road,<br> Dugri, Ludhiana 141002 </p>
 </div>
