--- a/laptoprep.html
+++ b/laptoprep.html
@@ -93,32 +93,32 @@ We have designed our process in such a way so that you use our computer repairin
 <h2 style="font-size:30px; text-align: center;">BEST SERVICES PROVIDED BY US</h2><br>
 <div class="para-3">
   
-<img src="../website or blog/images/download-3.jpg" alt="download-3.jpg" height="300px" width="400px" /> 
+<img src="../train/images/download-3.jpg" alt="download-3.jpg" height="300px" width="400px" /> 
 <p> <b> Laptop Screen Replacement<br>
   Starts ₹ 4399</b>
 </p>
 
-<img src="../website or blog/images/chip level.jpg" alt="chip level.jpg" height="300px" width="400px" />
+<img src="../train/images/chip level.jpg" alt="chip level.jpg" height="300px" width="400px" />
 <p> <b> Dead / Chip Level Repairing <br>
 Starts <br>
 ₹ 899</b>
 </p>
 
-<img src="../website or blog/images/notebook-laptop-repair-maintenance-cleanup-dust-dirty-checkup-electronic-devices-117236033.jpg" alt="" height="300px" width="400px" />
+<img src="../train/images/notebook-laptop-repair-maintenance-cleanup-dust-dirty-checkup-electronic-devices-117236033.jpg" alt="" height="300px" width="400px" />
 <p> <b>Laptop Servicing & Cleanup <br>
 Starts <br>
 ₹ 649</b></p>
-<img src="../website or blog/images/Laptop-Memory-Upgrade-in-1-Hour.jpg" alt="Laptop-Memory-Upgrade-in-1-Hour.jpg" height="300px" width="400px" />
+<img src="../train/images/Laptop-Memory-Upgrade-in-1-Hour.jpg" alt="Laptop-Memory-Upgrade-in-1-Hour.jpg" height="300px" width="400px" />
 <p><b> Laptop RAM Upgrade<br>
 Starts<br>
 ₹ 2222</b></p>
 
-<img src="../website or blog/images/download-2.jpg" alt="download-2" height="300px" width="400px" />
+<img src="../train/images/download-2.jpg" alt="download-2" height="300px" width="400px" />
 <p> <b>Laptop Keyboard Replacement <br>
 Starts <br>
 ₹ 1300 </b></p>
 
-<img src="../website or blog/images/download-1.jpg" alt="download-1" height="300px" width="400px" />
+<img src="../train/images/download-1.jpg" alt="download-1" height="300px" width="400px" />
 <p><b>Laptop Fabrication / Body Repair <br>
 Starts <br>
 
@@ -136,9 +136,9 @@ Starts <br>
 
 <div class="footer">
   <h3>FOLLOW US ALSO ON:</h3>
-<a class="footer"href="mailto:sanjeev_svct@yahoo.com"><img src="../website or blog/images/m-removebg-preview.png"  width="50px" height="50px"></a>
-<a class="footer"href=""><img src="../website or blog/images/OIP-removebg-preview.png" width="50px"height="50px"></a>
-<a class="footer" href="https://www.facebook.com/ldhcomputershop/reviews/"><img src="../website or blog/images/R-removebg-preview.png" width="50px"height="50px"></a>
+<a class="footer"href="mailto:sanjeev_svct@yahoo.com"><img src="../train/images/m-removebg-preview.png"  width="50px" height="50px"></a>
+<a class="footer"href=""><img src="../train/images/OIP-removebg-preview.png" width="50px"height="50px"></a>
+<a class="footer" href="https://www.facebook.com/ldhcomputershop/reviews/"><img src="../train/images/R-removebg-preview.png" width="50px"height="50px"></a>
 <h3>SHOP ADDRESS</h3>
 <p>Shop No 3, Guru Nanak Market,<br> Bhai Himmat Singh Nagar Road,<br> Dugri, Ludhiana 141002 </p>
 </div>
