--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@ currentSlide = i
 })
      </script> 
 <div class="bar">
-  <button class="b1" onclick="window.location.href='repair.html'"><img src="../website or blog/images/ser-removebg-preview-removebg-preview.png" height="100px"></button>
-  <button class="b1" onclick="window.location.href='operating.html'"><img src="../website or blog/images/os-removebg-preview.png" height="100px"></button>
-  <button class="b1" onclick="window.location.href='security.html'"><img src="../website or blog/images/service-removebg-preview.png" height="100px"></button>
-  <button class="b1" onclick="window.location.href='contact2.html'"><img src="../website or blog/images/download-removebg-preview.png" height="100px"></button>
+  <button class="b1" onclick="window.location.href='repair.html'"><img src="../train/images/ser-removebg-preview-removebg-preview.png" height="100px"></button>
+  <button class="b1" onclick="window.location.href='operating.html'"><img src="../train/images/os-removebg-preview.png" height="100px"></button>
+  <button class="b1" onclick="window.location.href='security.html'"><img src="../train/images/service-removebg-preview.png" height="100px"></button>
+  <button class="b1" onclick="window.location.href='contact2.html'"><img src="../train/images/download-removebg-preview.png" height="100px"></button>
 </div>
 <nav class="p1">
   
