--- a/contact2.html
+++ b/contact2.html
@@ -46,7 +46,7 @@
   <h1> CONTACT US</h1>
 </div>
 <div class="container">
-  <form action="httpts://forms.co/sanjeev_svct@gmail.com" method="post">
+  <form action="httpts://forms.co/tarubansal482@gmail.com" method="post">
     <label for="fname">First Name</label><br>
     <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
 <br>
