--- a/computerrep.html
+++ b/computerrep.html
@@ -53,7 +53,7 @@
   <button class="cr1" type="button"onclick="window.location.href='contact2.html'"><span>BOOK NOW</span></button>
 <br><br>
 </div>
-<center><img class="rc" src="../website or blog/images/computerrep.jpg" width="1000px" height="500px"></center>
+<center><img class="rc" src="../train/images/computerrep.jpg" width="1000px" height="500px"></center>
 <div class="parallax">
   <br><br><br>
   <h1 class="cc">COMPUTER REPAIR SERVICES</h1>
@@ -86,9 +86,9 @@
 <div class="footer">
   <br><br>
   <h3>FOLLOW US ALSO ON:</h3>
-<a class="footer"href="mailto:sanjeev_svct@yahoo.com"><img src="../website or blog/images/m-removebg-preview.png"  width="50px" height="50px"></a>
-<a class="footer"href=""><img src="../website or blog/images/OIP-removebg-preview.png" width="50px"height="50px"></a>
-<a class="footer" href="https://www.facebook.com/ldhcomputershop/reviews/"><img src="../website or blog/images/R-removebg-preview.png" width="50px"height="50px"></a>
+<a class="footer"href="mailto:sanjeev_svct@yahoo.com"><img src="../train/images/m-removebg-preview.png"  width="50px" height="50px"></a>
+<a class="footer"href=""><img src="../train/images/OIP-removebg-preview.png" width="50px"height="50px"></a>
+<a class="footer" href="https://www.facebook.com/ldhcomputershop/reviews/"><img src="../train/images/R-removebg-preview.png" width="50px"height="50px"></a>
 <h3>SHOP ADDRESS</h3>
 <p>Shop No 3, Guru Nanak Market,<br> Bhai Himmat Singh Nagar Road,<br> Dugri, Ludhiana 141002 </p>
 <br><br>
