--- a/printerrep.html
+++ b/printerrep.html
@@ -52,7 +52,7 @@
 <br><br>
 </div><br><br>
   <div class="para-5"><br><br>
-  <img src="../website or blog/images/copy.jpg" alt="copy.jpg" height="500px" width="400px" style="float:left;"/> 
+  <img src="../train/images/copy.jpg" alt="copy.jpg" height="500px" width="400px" style="float:left;"/> 
     <p>
    <b style="font-size:25px; ">We maintain and repair laser printers, ink-jet printers, plotters, dot matrix printers…</b> <br>
     We replace damaged parts such as ink rollers and headstocks and we repair electronic<br>
@@ -68,7 +68,7 @@
 </div>
 <br>
 <div class="para-6"><br><br>
-<img src="../website or blog/images/p2.jpg" alt="p2.jpg" height="400px" width="400px" style="float:right;"/>
+<img src="../train/images/p2.jpg" alt="p2.jpg" height="400px" width="400px" style="float:right;"/>
 <p style="text-align:left;">
   Repairs include replacing damaged parts, such as rollers, headstocks, feeders, trays, etc.<br>
  and we also repair damaged electronic parts such as plates and connectors.
@@ -91,9 +91,11 @@ As an additional support service, the sale of consumables as well as spare parts
 </nav>    
 <div class="footer">
   <h3>FOLLOW US ALSO ON:</h3>
-<a class="footer"href="mailto:sanjeev_svct@yahoo.com"><img src="../website or blog/images/m-removebg-preview.png"  width="50px" height="50px"></a>
-<a class="footer"href=""><img src="../website or blog/images/OIP-removebg-preview.png" width="50px"height="50px"></a>
-<a class="footer" href="https://www.facebook.com/ldhcomputershop/reviews/"><img src="../website or blog/images/R-removebg-preview.png" width="50px"height="50px"></a>
+<a class="footer"href="mailto:sanjeev_svct@yahoo.com"><img src="../train/images/m-removebg-preview.png"  width="50px" height="50px"></a>
+<a class="footer"href=""><img src="../train/images/OIP-removebg-preview.png" width="50px"height="50px"></a>
+<a class="footer" href="https://www.facebook.com/ldhcomputershop/reviews/"><img src="../train/images/R-removebg-preview.png" width="50px"height="50px"></a>
 <h3>SHOP ADDRESS</h3>
 <p>Shop No 3, Guru Nanak Market,<br> Bhai Himmat Singh Nagar Road,<br> Dugri, Ludhiana 141002 </p>
 </div>
+    </body>
+</html>
