--- a/security.html
+++ b/security.html
@@ -79,9 +79,9 @@ laptops to support the hundreds and thousands of applications today’s business
 </div>
 <div class="footer">
   <h3>FOLLOW US ALSO ON:</h3>
-<a class="footer"href="mailto:sanjeev_svct@yahoo.com"><img src="m-removebg-preview.png"  width="50px" height="50px"></a>
-<a class="footer"href=""><img src="OIP-removebg-preview.png" width="50px"height="50px"></a>
-<a class="footer" href="https://www.facebook.com/ldhcomputershop/reviews/"><img src="R-removebg-preview.png" width="50px"height="50px"></a>
+<a class="footer"href="mailto:sanjeev_svct@yahoo.com"><img src="../train/images/m-removebg-preview.png"  width="50px" height="50px"></a>
+<a class="footer"href=""><img src="../train/images/OIP-removebg-preview.png" width="50px"height="50px"></a>
+<a class="footer" href="https://www.facebook.com/ldhcomputershop/reviews/"><img src="../train/images/R-removebg-preview.png" width="50px"height="50px"></a>
 <h3>SHOP ADDRESS</h3>
 <p>Shop No 3, Guru Nanak Market,<br> Bhai Himmat Singh Nagar Road,<br> Dugri, Ludhiana 141002 </p>
 </div>
