--- a/security.html
+++ b/security.html
@@ -85,3 +85,5 @@ laptops to support the hundreds and thousands of applications today’s business
 <h3>SHOP ADDRESS</h3>
 <p>Shop No 3, Guru Nanak Market,<br> Bhai Himmat Singh Nagar Road,<br> Dugri, Ludhiana 141002 </p>
 </div>
+    </body>
+</html>
