--- a/computerrep.html
+++ b/computerrep.html
@@ -23,7 +23,7 @@
              <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-              <a href="operating.html">Oerating System</a>
+              <a href="operating.html">Operating System</a>
               <a href="security.html">Security Sytem</a>
             </div>
           </div>
