--- a/login.html
+++ b/login.html
@@ -1,1 +1,77 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>LOGIN FORM</title>
+        <link rel="stylesheet" href="../train/blog style work2.css">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+</head>
+    <body>  
+     <div class="main">
+<a href="mailto:sanjeev_svct@yahoo.com" style="font-size:medium ;">E-mail id: sanjeev_svct@yahoo.com</a><br>
+<a href="#" style="font-size:medium ;">Sales: 98146-83813, 9814833813</a>
+</div> 
+           <h1>TARU INFOTECH</h1>
+    <div class="navbar">
+        <br>
+        <a class="active" href="index.html">HOME</a>
+        <a href="mouse.html">ACCESSORIES</a>
+        <div class="dropdown">
+          <button class="dropbtn"><a href="#">SOFTWARE</a>
+           <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="operating.html">Operating System</a>
+            <a href="security.html">Security Sytem</a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <button class="dropbtn"> <a href="repair.html">REPAIR</a>
+           <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="laptoprep.html">Laptop Repair</a>
+            <a href="computerrep.html">Computer Repair</a>
+            <a href="printerrep.html">Printer Repair</a>
+          </div>
+        </div>
+      <a href="contact2.html">CONTACT US</a>
+      <br>
+      <form class="form-inline my-2 my-lg-0" action="">
+        <input type="search" placeholder="Search" aria-label="Search" required>
+        <button type="submit">Search</button>
+      </form>
+</div>
+<section>
+    <div class="imgbox">
+        <img src=".../train/images/pexels-hasan-albari-1229861.jpg">
+    </div>
+    <div class="conl">
+    <div class="formbx">
+        <div class="title"><h2>Login Form</h2></div>
+        <form action="login.php"class="login">
+            <div class="row">
+                <i class="fas fa-user"></i>
+                <input type="text" placeholder="Email or Phone" required>
+              </div>
+              <div class="row">
+                <i class="fas fa-lock"></i>
+                <input type="password" placeholder="Password" required>
+              </div>
+              <div class="remember">
+                <label> <input type="checkbox" name=""> Remember Me. </label>
+              </div>
+              <div class="pass"><a href="#">Forgot password?</a></div>
+              <div class="row button">
+                <input type="submit" value="Login">
+              </div>
+              <div class="signup-link">Not a member? <a href="#">Signup now</a></div>
+            </form>
+          </div>
+        </div>
+    </section>
+      </body>
+    </html>
