--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <input type="search" placeholder="Search" aria-label="Search" required>
         <button type="submit">Search</button>
       </form>
+   <button class="cr1" type="button"onclick="window.location.href='login.html'"><span>LOGIN</span></button>
 </div>
 <div class="w2"> <br><br><br>
   <h1>WELCOME TO OUR SITE</h1><br><br>
