--- a/login.html
+++ b/login.html
@@ -47,28 +47,32 @@
 </div>
 <section>
     <div class="imgbox">
-        <img src=".../train/images/pexels-hasan-albari-1229861.jpg">
+        <img src="../train/images/pexels-hasan-albari-1229861.jpg">
     </div>
     <div class="conl">
     <div class="formbx">
         <div class="title"><h2>Login Form</h2></div>
         <form action="login.php"class="login">
-            <div class="row">
-                <i class="fas fa-user"></i>
-                <input type="text" placeholder="Email or Phone" required>
-              </div>
-              <div class="row">
-                <i class="fas fa-lock"></i>
-                <input type="password" placeholder="Password" required>
-              </div>
-              <div class="remember">
-                <label> <input type="checkbox" name=""> Remember Me. </label>
-              </div>
-              <div class="pass"><a href="#">Forgot password?</a></div>
-              <div class="row button">
-                <input type="submit" value="Login">
-              </div>
-              <div class="signup-link">Not a member? <a href="#">Signup now</a></div>
+           <div class="inputbx">
+           <span>User Name</span>
+           <input type="textbox" name="" required>
+           </div>
+           <div class="inputbx">
+           <span>Password</span>
+           <input type="text" name="" required>
+           </div>
+           <div class="rembemer">
+           <label> <input type="checkbox" name="">Rembemer Me</label>    
+           </div>
+           <div class="inputbx">
+           <input type="submit" value="Sign In" name="">
+            </div>
+            <div class="inputbx">
+              <p>
+                Don't have an account <a href="#">Sign up</a>
+              </p>
+
+            </div>
             </form>
           </div>
         </div>
