--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
           </div>
         </div>
       <a href="contact2.html">CONTACT US</a>
+           <button class="sign"type="button"onclick="window.location.href='login.html'" style="text-align:'right';"><span>LOGIN</span></button>
+
       <br>
       <form class="form-inline my-2 my-lg-0" action="">
         <input type="search" placeholder="Search" aria-label="Search" required>
         <button type="submit">Search</button>
       </form>
-   <button class="cr1" type="button"onclick="window.location.href='login.html'"><span>LOGIN</span></button>
 </div>
 <div class="w2"> <br><br><br>
   <h1>WELCOME TO OUR SITE</h1><br><br>
