--- a/login.html
+++ b/login.html
@@ -51,7 +51,7 @@
     </div>
     <div class="conl">
     <div class="formbx">
-        <div class="title"><h2>Login Form</h2></div>
+        <div class="title"><h2>Login</h2></div>
         <form action="login.php"class="login">
            <div class="inputbx">
            <span>User Name</span>
