--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@ window.onclick = function(event) {
 <p>
   Enhance your workspace and improve how you work, communicate and interact with <br>
    computer accessories, laptop accessories and repairing sevices etc — all from Insight. 
-  <br> by clicking the following button you can ask any qury  <br>
+  <br> by clicking the following button you can sign up and ask any query <br>
 </p><br><br>
-<button class="cr1" type="button"onclick="window.location.href='contact2.html'"><span>BOOK NOW</span></button>
+    <button class="s" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Sign Up</button>
 </div>
 <div class="slide-container">
   <div class="slide fade">
