--- a/mouse.html
+++ b/mouse.html
@@ -43,15 +43,12 @@
         <button type="submit">Search</button>
       </form>
 </div>
-<div class="w1"> <br><br><br>
+<div class="w1"> <br><br><br><br>
   <h1>Computer Accessories</h1><br><br>
 <p>
   Enhance your workspace and improve how you work, communicate and interact with <br>
    computer accessories, laptop accessories and more — all from Insight. 
-  <br> by clicking on followingbutton book or buy now the accessories <br>
 </p>
-<button class="cr1" type="button"onclick="window.location.href='contact2.html'"><span>BOOK NOW</span></button>
-
 </div><br>
 <div class="test">
 <div class="mouse">
