--- a/mouse.html
+++ b/mouse.html
@@ -50,93 +50,13 @@
    computer accessories, laptop accessories and more — all from Insight. 
 </p>
 </div><br>
-<div class="test">
-<div class="mouse">
-  <h1>MOUSES</h1>
-  <div class="card">
-    <img src="../train/images/mou1.jpg" alt=" Picktech Q5 Slim Rechargeable Wireless Mouse"style="width:100%">
-    <h1>Picktech Q5 Slim Rechargeable Wireless Mouse</h1>
-    <p class="price">₹2,492.00 INR</p>
-    <p>Picktech Q5 Slim Rechargeable Wireless Mouse, <br>
-      2.4G Portable Optical Silent Ultra Thin Wireless <br>
-       Computer Mouse with USB Receiver and Type C Adapter, <br> 
-       Compatible with PC, Laptop, Desktop (Rose Gold) Online Visit</p>
-    <p><button>Add to Cart</button></p>
-  </div>
-  <br>
-  <div class="card">
-    <img src="../train/images/m2.jpg" alt="amazon mouse" style="width:100%">
-    <h1>AMAZON</h1>
-    <p class="price">₹1250</p>
-    <p>Buy Wireless Computer Mouse with USB Nano Receiver - Black Online at Lowest Price in Denmark.</p>
-    <p><button>Add to Cart</button></p>
-  </div><br>
-  <div class="card">
-    <img src="../train/images/m3.jpg" alt="Dell MS3220 Laser Wired Mouse" style="width:100%">
-    <h1>Dell MS3220 Laser Wired Mouse</h1>
-    <p class="price">₹2500</p>
-<p>Dell MS3220 Laser Wired Mouse with Ambidextrous design and two Programmable Buttons</p>
-    <p><button>Add to Cart</button></p>
-  </div><br>
-  <div class="card">
-    <img src="../train/images/m4.jpg" alt="Zebion"    style=width:100%>
-    <h1>Zebion</h1>
-    <p class="price">₹199.00</p>
-    <p>Zebion JOY Wireless Optical Gaming Mouse with 1 Year Warrenty </p>
-    <p><button>Add to Cart</button></p>
-  </div><br>
-  <div class="card">
-    <img src="../train/images/m5.jpg" alt="Standard Cordless Computer Mouse" style="width:100%">
-    <h1>Standard Cordless Computer Mouse</h1>
-    <p class="price"> ₹4,740</p>
-    <p>standard cordless computer mouse (black) in Jamshedpur at best price by Vincy India - Justdial</p>
-    <p><button>Add to Cart</button></p>
-  </div><br> </div>
-  <div class="keyboard">
-    <h1>SOME KEYBOARDS WHICH YOU CAN BUY</h1>
-  <div class="card">
-    <img src="../train/images/K1.jpg" alt="unknown" style="width:100%">
-    <h1>UNKOWN BRAND</h1>
-    <p class="price">Rs999</p>
-    <p>Wire Keyboard Ultra-Thin Quiet Small Size 78 Keys Mini Keyboard usb For Laptop Pc office home
-      Visit
-    </p>
-    <p><button>Add to Cart</button></p>
-  </div>
-  <div class="card">
-    <img src="../train/images/K2.jpg" alt="Lapcare D Lite Plus" style="width:100%">
-    <h1>Lapcare D Lite Plus</h1>
-    <p class="price">₹590</p>
-    <p>Lapcare D Lite Plus Wired Mini Keyboard with Chocolate Keys (Black)</p>
-    <p><button>Add to Cart</button></p>
-  </div>
-  <div class="card">
-    <img src="../train/images/k6.jpg" alt="Nuklz N" style="width:100%">
-    <h1>Nuklz N</h1>
-    <p class="price"> ₹4,438</p>
-    <p>Nuklz N Large Print Computer Keyboard with White Keys & Black Letters for Visually Impaired</p>
-    <p><button>Add to Cart</button></p>
-  </div>
-  <div class="card">
-    <img src="../train/images/K4.jpg" alt="Wired Computer Keyboard" style="width:100%">
-    <h1>Wired Computer Keyboard</h1>
-    <p class="price">Rs 599</p>
-    <p>Keyboard Type:	With Wire
-      Height:	24 Millimeters
-      Item Width:	12.7 Centimeters
-      Dimensions:	44.2 x 12.7 x 2.4 cm
-      Width: 12.7 Centimeters</p>
-    <p><button>Add to Cart</button></p>
-  </div>
-  <div class="card">
-    <img src="../train/images/K5.jpg" alt="SimplyPlugo" style="width:100%">
-    <h1>SimplyPlugo</h1>
-    <p class="price">₹7,615</p>
-    <p>1 X Thai and English Wired USB Computer Keyboard - Black Computer Keyboard with White Characters or Letters (Mostly for PC Windows)</p>
-    <p><button>Add to Cart</button></p>
-  </div>
-   </div>       
-   </div>    
+    <br><br><center>
+<div class="acess">
+<button class="mb" type="button"onclick="window.location.href='mo1.html'"> <br>MOUSE <br></button><br><br>
+<button class="kb" type="button" onclick="window.location.href='keyboard.html'"><br>KEYBOARD</button><br><br>
+<button class="hb" type="button" onclick="window.location.href='headphone.html'"><br>HEADPHONE<br></button><br><br>
+</div></center>
+<br><br><br>
 <div class="footer">
   <h3>FOLLOW US ALSO ON:</h3>
 <a class="footer"href="mailto:sanjeev_svct@yahoo.com"><img src="../train/images/m-removebg-preview.png"  width="50px" height="50px"></a>
