--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
            <h1>TARU INFOTECH</h1>
     <div class="navbar">
         <br>
-        <button class="s" onclick="document.getElementById('id01').style.display='block'" style="width:auto; margin-left:600px">Sign Up</button>
+        <button class="s" onclick="document.getElementById('id01').style.display='block'" style="width:auto; margin-left:600px; font-size:20px;">Sign Up</button>
 <div id="id01" class="modal">
   <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
   <form class="modal-content" action="/action_page.php">
@@ -54,7 +54,7 @@ window.onclick = function(event) {
   }
 }
 </script>
-
+<br>
 
         <a class="active" href="index.html">HOME</a>
         <a href="mouse.html">ACCESSORIES</a>
