--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ window.onclick = function(event) {
     modal.style.display = "none";
   }
 }
-</script>
+</script> <br>
         <a class="active" href="index.html">HOME</a>
         <a href="mouse.html">ACCESSORIES</a>
         <div class="dropdown">
