--- a/headphone.html
+++ b/headphone.html
@@ -92,44 +92,39 @@ window.onclick = function(event) {
 </div><br>
 <div class="headphone">
   <div class="card">
-    <img src="../train/images/K1.jpg" alt="unknown" style="width:100%">
-    <h1>UNKOWN BRAND</h1>
-    <p class="price">Rs999</p>
-    <p>Wire Keyboard Ultra-Thin Quiet Small Size 78 Keys Mini Keyboard usb For Laptop Pc office home
-      Visit
+    <img src="https://images.app.goo.gl/DiNo1kUhEZFG5JFM6" alt="unknown" style="width:100%">
+    <h1>Zebronics Jet PRO Premium Wired Gaming On Ear Headphone with LED for Headband + earcups</h1>
+    <p class="price"> ₹749.00</p>
+    <p>Get gaming and unleash the inner champion with the ZEB-JET PRO premium gaming headphones. Experience deep bass and immersive audio with the 40mm 
     </p>
     <p><button>Add to Cart</button></p>
   </div>
   <div class="card">
-    <img src="../train/images/K2.jpg" alt="Lapcare D Lite Plus" style="width:100%">
-    <h1>Lapcare D Lite Plus</h1>
+    <img src="https://images.app.goo.gl/u4eYtbr3uPMVnR8r8" alt="Lapcare D Lite Plus" style="width:100%">
+    <h1>iClever</h1>
     <p class="price">₹590</p>
-    <p>Lapcare D Lite Plus Wired Mini Keyboard with Chocolate Keys (Black)</p>
+    <p> Cat Ear Led Light Up Kids Headphones with Microphone, iClever HS20 Wired Headphones -Shareport- 94dB Volume Limited, Foldable Over-Ear Headphones </p>
     <p><button>Add to Cart</button></p>
   </div>
   <div class="card">
-    <img src="../train/images/k6.jpg" alt="Nuklz N" style="width:100%">
-    <h1>Nuklz N</h1>
-    <p class="price"> ₹4,438</p>
-    <p>Nuklz N Large Print Computer Keyboard with White Keys & Black Letters for Visually Impaired</p>
+    <img src="https://images.app.goo.gl/6cb5X5XiN3inBvAB9" alt="Nuklz N" style="width:100%">
+    <h1>boAt Rockerz 450</h1>
+    <p class="price"> ₹1,499.00 </p>
+    <p>Rockerz 450R, Set your mind ablaze with boAt Rockerz 450 — our slick headphones that offer immersive sound quality and add luxury to your sound.</p>
     <p><button>Add to Cart</button></p>
   </div>
   <div class="card">
-    <img src="../train/images/K4.jpg" alt="Wired Computer Keyboard" style="width:100%">
-    <h1>Wired Computer Keyboard</h1>
+    <img src="https://images.app.goo.gl/oKSaRgmpwgDeD6Mb8" style="width:100%">
+    <h1>boAt Rockerz 518</h1>
     <p class="price">Rs 599</p>
-    <p>Keyboard Type:	With Wire
-      Height:	24 Millimeters
-      Item Width:	12.7 Centimeters
-      Dimensions:	44.2 x 12.7 x 2.4 cm
-      Width: 12.7 Centimeters</p>
+    <p>Wireless Headphone with Dynamic 50mm Driver, Up To 20 Hours Of Playtime, Easy Control and Lightweight</p>
     <p><button>Add to Cart</button></p>
   </div>
   <div class="card">
-    <img src="../train/images/K5.jpg" alt="SimplyPlugo" style="width:100%">
-    <h1>SimplyPlugo</h1>
+    <img src="https://images.app.goo.gl/hU7fEsDJ4wCskCJT8" alt="SimplyPlugo" style="width:100%">
+    <h1>Wireless Headphone TASH402LF/00</h1>
     <p class="price">₹7,615</p>
-    <p>1 X Thai and English Wired USB Computer Keyboard - Black Computer Keyboard with White Characters or Letters (Mostly for PC Windows)</p>
+    <p>Crush your personal best with these wireless sweat-resistant over-ear sports headphones. Lightweight and comfortable, they pack 20 hours play time into a single charge. Cooling ear-cup cushions keep you focused when the going gets hot.</p>
     <p><button>Add to Cart</button></p>
   </div>
    </div>       
