commit2Update index.html

--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@ window.onclick = function(event) {
 }
 </script> <br>
         <a class="active" href="index.html">HOME</a>
-        <a href="mouse.html">ACCESSORIES</a>
         <div class="dropdown">
-          <button class="dropbtn"><a href="#">SOFTWARE</a>
+          <button class="dropbtn"><a>SOFTWARE</a>
            <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
